@@ -1,8 +1,9 @@
 Source: @PACKAGE@
 Section: devel
 Priority: optional
-Build-Depends: libcurl3, libssl0.9.8 | libssl1.0.0
+Build-Depends: libcurl3, libssl0.9.8 | libssl1.0.0 | libssl1.0-dev
 Maintainer: Guardtime <support@guardtime.com>
+Standards-Version: 4.1.0.0
 
 Package: @PACKAGE@
 Architecture: any
