@@ -3,6 +3,6 @@ Version: @VERSION@
 Section: devel
 Priority: optional
 Architecture: @DPKG_VERSION_REPLACED_WITH_SED@
-Depends: libcurl3, libssl0.9.8 | libssl1.0.0
+Depends: libcurl3, libssl0.9.8 | libssl1.0.0 | libssl1.0-dev
 Maintainer: Guardtime <support@guardtime.com>
 Description: KSI C API.
